Launcher.java: Use ConcMarkSweepGC.
It's deprecated, but currently working in JRE 10.0.1